--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="..\fonts\fonts.css" />
-    <link rel="stylesheet" href="..\styles\global.css" />
-    <link rel="stylesheet" href="..\styles\style.css" />
+    <link rel="stylesheet" href="../fonts/fonts.css" />
+    <link rel="stylesheet" href="../styles/global.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
   </head>
   <body>
     <header class="header">
@@ -17,10 +17,14 @@
             <a class="header__link header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
-            <span class="menu__span"><a class="header__link">посмотреть лоты</a></span>
+            <span class="menu__span"
+              ><a class="header__link">посмотреть лоты</a></span
+            >
           </li>
           <li class="header__links-list-item">
-            <span class="menu__span"><a class="header__link">об аукционе</a></span>
+            <span class="menu__span"
+              ><a class="header__link">об аукционе</a></span
+            >
           </li>
         </ul>
       </nav>
@@ -40,9 +44,15 @@
     <main>
       <section class="cover">
         <h1 class="cover__title">
-          <span class="title-span aligned-text">Он<span class="no-letter-spacing">о</span></span>
-          <span class="title-span aligned-text_center">теб<span class="no-letter-spacing">е</span></span>
-          <span class="title-span aligned-text_right">над<span class="no-letter-spacing">о</span></span>
+          <span class="title-span aligned-text"
+            >Он<span class="no-letter-spacing">о</span></span
+          >
+          <span class="title-span aligned-text_center"
+            >теб<span class="no-letter-spacing">е</span></span
+          >
+          <span class="title-span aligned-text_right"
+            >над<span class="no-letter-spacing">о</span></span
+          >
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
@@ -108,7 +118,7 @@
         <div class="about__column about__logo">
           <img
             class="about__logo-image"
-            src="..\images\logo-white.svg"
+            src="../images/logo-white.svg"
             alt="Логотип"
           />
         </div>
@@ -156,7 +166,7 @@
           <a class="footer__social-link">
             <img
               class="footer__social-icon"
-              src="..\images\yt.svg"
+              src="../images/yt.svg"
               alt="Ссылка на ютуб"
             />
           </a>
@@ -165,7 +175,7 @@
           <a class="footer__social-link">
             <img
               class="footer__social-icon"
-              src="..\images\vk.svg"
+              src="../images/vk.svg"
               alt="Ссылка на ВКонтакте"
             />
           </a>
@@ -174,7 +184,7 @@
           <a class="footer__social-link">
             <img
               class="footer__social-icon"
-              src="..\images\pinterest.svg"
+              src="../images/pinterest.svg"
               alt="Ссылка на Пинтерест"
             />
           </a>
