--- a/index.html
+++ b/index.html
@@ -68,49 +68,60 @@
           <li class="lots__card-list-item">
             <a class="card-link">
               <article class="card card_type_film">
-                <p class="card__heading">
-                  Фильм режиссёра, который бросил киношколу
-                </p>
-                <p class="card__text">
-                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                  ставка, если бы вы не знали, что режиссёр — Пол Томас
-                  Андерсон?
-                </p>
+                <div class="card__text-container">
+                  <p class="card__heading">
+                    Фильм режиссёра, который бросил киношколу
+                  </p>
+                  <p class="card__text">
+                    Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                    ставка, если бы вы не знали, что режиссёр — Пол Томас
+                    Андерсон?
+                  </p>
+                </div>
+                <div class="overlay"></div>
               </article>
             </a>
           </li>
           <li class="lots__card-list-item">
             <a class="card-link">
               <article class="card card_type_book">
-                <p class="card__heading">
-                  Книга, где описан один скучный день из жизни рекламного агента
-                </p>
-                <p class="card__text">
-                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
-                  с переходами на древнеанглийский. В ней одновременно
-                  рассказывается о 16 июня 1904 года и об истории литературы,
-                  начиная с античных времён. И это всё накладывается на
-                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
-                  Джеймса Джойса?
-                </p>
+                <div class="card__text-container">
+                  <p class="card__heading">
+                    Книга, где описан один скучный день из жизни рекламного
+                    агента
+                  </p>
+                  <p class="card__text">
+                    Объёмом почти в тысячу страниц. Иногда без знаков препинания
+                    и с переходами на древнеанглийский. В ней одновременно
+                    рассказывается о 16 июня 1904 года и об истории литературы,
+                    начиная с античных времён. И это всё накладывается на
+                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                    Джеймса Джойса?
+                  </p>
+                </div>
+                <div class="overlay"></div>
               </article>
             </a>
           </li>
           <li class="lots__card-list-item">
             <a class="card-link">
               <article class="card card_type_picture">
-                <p class="card__heading">
-                  Картина, которую повторит даже 5-летний сын маминой подруги
-                </p>
-                <p class="card__text">
-                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                  котиков... Сколько бы вы на такое поставили, если бы не знали,
-                  что это — одна из революционных работ Кандинского?
-                </p>
+                <div class="card__text-container">
+                  <p class="card__heading">
+                    Картина, которую повторит даже 5-летний сын маминой подруги
+                  </p>
+                  <p class="card__text">
+                    Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                    что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                    котиков... Сколько бы вы на такое поставили, если бы не
+                    знали, что это — одна из революционных работ Кандинского?
+                  </p>
+                </div>
+                <div class="overlay"></div>
               </article>
             </a>
           </li>
+          
         </ul>
         <a class="lots__look-more-link">посмотреть больше</a>
       </section>
@@ -124,17 +135,17 @@
         </div>
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
-          <p class="about__text">
+          <p class="about__text first-paragraph">
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
             картина, которую может нарисовать даже ребёнок? Кому нужны все эти
             странные вещи, созданные любителями?
           </p>
-          <p class="about_text">
+          <p class="about__text">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            Когда-то они казались просто неудачными. Но, несмотря <br>на критику,
             кажущуюся простоту или сложность, сейчас без этих лотов невозможно
             представить современную культуру. Когда в эти вещи не верил никто,
             продолжали верить их создатели. И сейчас эти лоты стали культовыми.
