--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="../fonts/fonts.css" />
-    <link rel="stylesheet" href="../styles/global.css" />
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <header class="header">
@@ -17,12 +17,12 @@
             <a class="header__link header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
-            <span class="menu__span"
+            <span class="header__menu__link-container"
               ><a class="header__link">посмотреть лоты</a></span
             >
           </li>
           <li class="header__links-list-item">
-            <span class="menu__span"
+            <span class="header__menu__link-container"
               ><a class="header__link">об аукционе</a></span
             >
           </li>
@@ -31,7 +31,7 @@
       <a class="header__logo">
         <img
           class="header__logo-image"
-          src="../images/logo-black.svg"
+          src="images/logo-black.svg"
           alt="Логотип"
         />
       </a>
@@ -58,7 +58,7 @@
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">Сделать ставку</button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
         <div class="overlay"></div>
       </section>
@@ -69,9 +69,9 @@
             <a class="card-link">
               <article class="card card_type_film">
                 <div class="card__text-container">
-                  <p class="card__heading">
+                  <h3 class="card__heading">
                     Фильм режиссёра, который бросил киношколу
-                  </p>
+                  </h3>
                   <p class="card__text">
                     Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                     ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -128,13 +128,13 @@
         <div class="about__column about__logo">
           <img
             class="about__logo-image"
-            src="../images/logo-white.svg"
+            src="images/logo-white.svg"
             alt="Логотип"
           />
         </div>
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
-          <p class="about__text first-paragraph">
+          <p class="about__text paragraph-starting">
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
@@ -177,7 +177,7 @@
           <a class="footer__social-link">
             <img
               class="footer__social-icon"
-              src="../images/yt.svg"
+              src="images/yt.svg"
               alt="Ссылка на ютуб"
             />
           </a>
@@ -186,7 +186,7 @@
           <a class="footer__social-link">
             <img
               class="footer__social-icon"
-              src="../images/vk.svg"
+              src="images/vk.svg"
               alt="Ссылка на ВКонтакте"
             />
           </a>
@@ -195,7 +195,7 @@
           <a class="footer__social-link">
             <img
               class="footer__social-icon"
-              src="../images/pinterest.svg"
+              src="images/pinterest.svg"
               alt="Ссылка на Пинтерест"
             />
           </a>
